# 2DPlatformer

./: CMakeLists.txt  GetDependencies.cmake  README.md
src/: CMakeLists.txt  ProjectDefs.hpp  TODOREMOVEME.hpp  main.cpp
src/Command/: CMakeLists.txt  Command.hpp  InitJump.cpp  InitJump.hpp  InitMoveLeft.cpp  InitMoveLeft.hpp  InitMoveRight.cpp  InitMoveRight.hpp  NullCommand.cpp  NullCommand.hpp  StopMoveLeft.cpp  StopMoveLeft.hpp  StopMoveRight.cpp  StopMoveRight.hpp
src/Common/: CMakeLists.txt
src/ControlScheme/: CMakeLists.txt  ControlScheme.hpp  StdKeyBoardCtrlScheme.cpp  StdKeyBoardCtrlScheme.hpp
src/EntityComponent/: CMakeLists.txt  EntityComponentDefs.hpp
src/Graphics/: GameGraphics.cpp  RenderInstructionFactory.hpp
src/common/: CMakeLists.txt  FileSystem.hpp
src/graphics/: CMakeLists.txt  GameGraphics.cpp  Graphics.cpp  Graphics.hpp  GraphicsDefs.hpp  Renderer.cpp  Renderer.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/logging/: CMakeLists.txt  Logger.hpp
